scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,4 +4,11 @@ body {
   background-color: #1f1f1f;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none; 
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
